@@ -93,6 +93,8 @@ ESCAPE_OVR(0A,"2*",2,Is2Op)
 ESCAPE_OVR(0B,"2&",2,Is2Op)
 ESCAPE_OVR(0C,"2|",2,Is2Op)
 ESCAPE_OVR(0D,"2^",2,Is2Op)
+ESCAPE_OVR(0E,"2sto",2,Is2Op)
+ESCAPE_OVR(0F,"2rst",2,Is2Op)
 
 ESCAPE_79(00,"71",3)
 ESCAPE_79(01,"70",3)
