@@ -339,6 +339,20 @@ Pseudo::Pseudo(size_t num,int infover,const string&sprite,int claimed_size){
 					case'&':out.put(0x0B);continue;
 					case'|':out.put(0x0C);continue;
 					case'^':out.put(0x0D);continue;
+					case's':out.put(0x0E);
+						if(in.get()=='t'&&in.peek()=='o'){
+							in.ignore();
+							continue;
+						}
+						in.unget();
+						continue;
+					case'r':out.put(0x0F);
+						if(in.get()=='s'&&in.peek()=='t'){
+							in.ignore();
+							continue;
+						}
+						in.unget();
+						continue;
 					}
 					break;
 				}case'7':{
